--- a/StoreBook/Views/Home/Index.cshtml
+++ b/StoreBook/Views/Home/Index.cshtml
@@ -14,11 +14,11 @@
             <img src="~/Images/@sach.Anhbia" alt="Thumbnail Image 1" class="img- responsive img-rounded imgbook" style="width:400px;">
             <div class="caption">
                 <h4 style="min-height:70px;">
-                    <a href="@Url.Action("BookDetail","SachOnline", new { id = sach.MaSach})">@sach.TenSach</a>
+                    <a href="@Url.Action("ChiTietSach","SachOnline", new { id = sach.MaSach})">@sach.TenSach</a>
                 </h4>
                 <p>
-                    <a href="#" class="btn btn-primary" role="button">
-                        <span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span> Add to Cart
+                    <a href="/SachOnline/ChiTietSach/@sach.MaSach" class="btn btn-primary" role="button">
+                        <span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span>Add to Cart
                     </a>
                 </p>
             </div>
