--- a/StoreBook/Views/SachOnline/SachTheoChuDe.cshtml
+++ b/StoreBook/Views/SachOnline/SachTheoChuDe.cshtml
@@ -9,16 +9,16 @@
 <hr />
 <div class="row text-center">
     @foreach (var sach in Model)
-	 {
+    {
         <div class="col-sm-4 col-md-4 col-lg-4 col-xs-6">
             <div class="thumbnail">
-                <img src="~/Images/@sach.Anhbia" alt="@sach.TenSach" class="img-responsive img-rounded imgbook"/>
+                <img src="~/Images/@sach.Anhbia" alt="@sach.TenSach" class="img-responsive img-rounded imgbook" />
                 <div class="caption">
                     <h4 style="min-height: 70px">
-                        <a href="@Url.Action("ChiTietSach","SachOnilne",new { id = sach.MaSach })">@sach.TenSach</a>
+                        <a href="@Url.Action("Chitietsach","SachOnline", new { id = sach.MaSach })">@sach.TenSach</a>
                     </h4>
                     <p>
-                        <a href="#" class="btn btn-primary" role="button">
+                        <a href="@Url.Action("ThemGioHang","GioHang", new { ms = sach.MaSach, url = Request.Url.ToString() })" class="btn btn-primary" role="button">
                             <span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span> Add to Cart
                         </a>
                     </p>
@@ -26,7 +26,7 @@
             </div>
 
         </div>
-	 }
+    }
 
 </div>
 
