--- a/StoreBook/Views/Shared/_Layout.cshtml
+++ b/StoreBook/Views/Shared/_Layout.cshtml
@@ -39,7 +39,7 @@
                         </ul>
                     </li>
                     <li>
-                        <a href="#"><span class="glyphicon glyphicon-shopping-cart"></span> Giỏ hàng (0)</a>
+                        @Html.Action("GioHangPartial", "GioHang")
                     </li>
                 </ul>
                 <form class="navbar-form navbar-right" role="search">
