--- a/StoreBook/Views/GioHang/GioHangPartial.cshtml
+++ b/StoreBook/Views/GioHang/GioHangPartial.cshtml
@@ -1,5 +1,6 @@
-﻿<a href="@Url.Action("GioHang","Giohang")" style="color:white; font-weight:bold; text-decoration:none;">
-    <img src="~/Images/Giohang.gif"/>
-    Giỏ Hàng (@ViewBag.Tongsoluong)
-
-</a>
+﻿<li>
+    <a href="@Url.Action("Giohang","GioHang")">
+        <span class="glyphicon glyphicon-shopping-cart"></span>
+        Giỏ hàng (@ViewBag.TongSoLuong)
+    </a>
+</li>
