--- a/StoreBook/Views/Shared/_Layout.cshtml
+++ b/StoreBook/Views/Shared/_Layout.cshtml
@@ -30,13 +30,8 @@
                     <li class="active"><a href="#">LIÊN HỆ</a> </li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
-                    <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false" aria-haspopup="true">Người dùng<span class="caret"></span></a>
-                        <ul class="dropdown-menu">
-                            <li><a href="/User/DangKy"><span class="glyphicon glyphicon-user"></span> Đăng ký</a> </li>
-                            <li role="separator" class="divider"></li>
-                            <li><a href="/User/Dangnhap"><span class="glyphicon glyphicon-log-in"></span> Đăng nhập</a></li>
-                        </ul>
+                    <li>
+                        @Html.Action("LoginLogout", "SachOnline")
                     </li>
                     <li>
                         @Html.Action("GioHangPartial", "GioHang")
